# paty

./: .gitignore  Cargo.toml  Makefile  test.sh
.github/workflows/: ci.yml
examples/: fib.paty  foo.paty
src/: c.rs  gen.rs  ir.rs  lib.rs  main.rs  sem.rs  syntax.rs  ty.rs  typing.rs
src/ir/: builder.rs  inst.rs  optimizer.rs
src/sem/: error.rs  usefulness.rs
src/syntax/: token.rs  tree.rs
test/: error.sh  focus-test.sh  pattern-match.sh  test.sh  test_wasm.sh  todo.sh
