[package]
name = "paty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.7.0"
exitcode = "1.1.2"
typed-arena = "2.0.1"
thiserror = "1.0.30"
bs58 = "0.4.0"
itertools = "0.10.3"
clap = { version = "3.1.9", features = ["derive"] }